--- a/courses.html
+++ b/courses.html
@@ -64,7 +64,7 @@
         <main class="">
         
         <h3 style="text-align: center;">Brewing the perfect cup</h3>
-            <img src="img/blog3.jpg" alt="coffee" class="form-img; rcorners1">
+            <img src="img/blog3.jpg" alt="coffee" class="form-img;">
         
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, sequi pariatur. Hic officiis veritatis modi id dolorum nisi optio quasi voluptate nostrum excepturi sit, eveniet soluta, eius aliquid blanditiis labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati voluptatum, rerum numquam omnis cum excepturi fugit reiciendis officia autem ratione explicabo quo deserunt odio amet. Quibusdam libero quo quam.</p>
         <a class="btn btn3" href="https://www.google.com">Sign Up</a>
